2012-01-27  Henri Doreau <henri.doreau@greenbone.net>

	* src/ntp_11.c (ntp_11_parse_input): Delete stop_required arglist entry
	instead of setting its value to zero when resuming a scan.

2012-01-27  Henri Doreau <henri.doreau@greenbone.net>

	* src/ntp_11.c (ntp_11_parse_input): Reset stop_required variable on
	scan resume.

2012-01-27  Henri Doreau <henri.doreau@greenbone.net>

	* src/ntp_11.c (ntp_11_parse_input),
	src/attack.c (attack_network):
	Don't start the second scan phase when network scan is enabled and
	user requests "stop" during the first phase.

2012-01-25  Henri Doreau <henri.doreau@greenbone.net>

	* src/attack.c (launch_plugin): Ignore script_mandatory_keys
	requirements during network-wide scanning phase.

2011-12-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Re-arranged text a bit and added some Debian 6 info.

2011-11-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.c (openvassd_defaults): Add reverse_lookup to the
	list of default scanner options with default value "no".

2011-11-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Quote variables in tests to ensure strings
	containing spaces are handled correctly.

2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Adjust source locations in install command to enable
	installation from an out-of-source build.

2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.3+beta3.

2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.3+beta2 release.

	* CHANGES: Updated.

	* INSTALL: Note dependency on openvas-libraries >= 5.0+beta2.

2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Use awk instead of read since the "-d"
	option is not available in all shells.

2011-10-04  Matthew Mundell <matthew.mundell@greenbone.net>
