@@ -1,3 +1,8 @@
+2012-03-05  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/pluginlaunch.c (update_running_processes): Send an ERRMSG to the
+	client when terminating a process.
+
 2012-01-27  Henri Doreau <henri.doreau@greenbone.net>
 
 	* src/ntp_11.c (ntp_11_parse_input): Delete stop_required arglist entry
